--- a/src/styles/repositories.scss
+++ b/src/styles/repositories.scss
@@ -2,7 +2,11 @@ section.repository-list {
     margin: 40px;
 
     h1 {
-        margin-bottom: 16px;
+        margin-bottom: 28px;
+    }
+
+    h3 {
+        text-transform: uppercase;
     }
 
     ul {
@@ -21,14 +25,21 @@ section.repository-list {
         }
 
         a {
-            display: inline-block;
-            margin-top: 16px;
-            text-decoration: none;
-            color: #8257e6;
-            transition: 0.1s ease-in-out;
+            button {
+                display: inline-block;
+                margin-top: 8px;
+                margin-bottom: 14px;
+                padding: 12px;
+                border: none;
+                border-radius: 6px;
+                color: #fff;
+                background-color: #8257e6;
+                cursor: pointer;
+                transition: 0.1s ease-in-out;
 
-            &:hover {
-                color: #553897;
+                &:hover {
+                    background-color: #553897;
+                }
             }
         }
     }
